better handling for SP without explicit OH description